--- a/packages.config
+++ b/packages.config
@@ -3,9 +3,9 @@
   <package id="AutoMapper" version="7.0.1" targetFramework="net451" />
   <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
-  <package id="jose-jwt" version="2.4.0" targetFramework="net46" />
+  <package id="jose-jwt" version="2.4.0" targetFramework="net46" requireReinstallation="true" />
   <package id="log4net" version="2.0.8" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
-  <package id="Quartz" version="2.6.1" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net451" />
+  <package id="Quartz" version="3.0.7" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net451" requireReinstallation="true" />
 </packages>
