--- a/packages.config
+++ b/packages.config
@@ -1,15 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.5.0" targetFramework="net461" />
+  <package id="Autofac" version="4.8.1" targetFramework="net461" />
   <package id="Autofac.WebApi2" version="4.2.0" targetFramework="net461" />
   <package id="AutoMapper" version="8.0.0" targetFramework="net461" />
-  <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net461" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net461" />
   <package id="jose-jwt" version="2.4.0" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.0" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="Quartz" version="3.0.7" targetFramework="net461" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
